8231515: [Graal] Crash during exception throwing in InterpreterRuntime::resolve_invoke

Reviewed-by: kvn, dlong, iveresov